# argos-sferes

./: .gitignore  CMakeLists (copy).txt  CMakeLists.txt  README.md  compile_video.sh  create_centroids.sh  launch.sh  launch_6D.sh  launch_BO_jobs.sh  launch_Gomes_jobs.sh  launch_analysis_jobs.sh  launch_baseline_jobs.sh  launch_environment_descriptor.sh  launch_environment_descriptor_foraging.sh  launch_envirtaskagnostic_descriptor.sh  launch_foraging_BO.sh  launch_foraging_BO_array.sh  launch_foraging_analysis.sh  launch_foraging_jobs.sh  launch_foraging_performance_recording.sh  launch_jobs.sh  launch_performance_recording.sh  launch_perturbation_jobs.sh  make_all_BO.sh  make_all_analysis.sh  make_all_envirparallel.sh  make_all_parallel.sh  make_all_simulation.sh  make_all_tests.sh  make_baseline.sh  process_archive_data.py  submit_baseline_job.sh  submit_envir_job.sh  submit_ite.sh  submit_job.sh  submit_single.sh  submit_test.sh  zero_padding_data.sh
BD_plots/: BD_metrics.py  BO_metrics.py  NCD.py  acqui_checks.py  calculations.py  check_data.py  combine_perturbations.py  diagram_plots.py  dimensionality_plot.py  distance_metrics.py  fault_analysis.py  foraging_analysis.py  foraging_faults.py  foraging_params.py  generate_feasible_BDdata.py  ite_plots.py  kernel_checks.py  perturbance_metrics.py  perturbation_analysis.py  perturbation_analysis_foraging.py  perturbation_plots.py  plots.py  process_archive_data.py  reduce_translated_archive.py  resilience_contribution.py  run_id_map.py  sensitivity_analysis.py  signature_distance_plot.py  signature_plot.py  signature_plot_impact.py  significance.py  virtual_energy.py
BD_plots/foraging/: analyse_faults.py  foraging_analysis.py  foraging_params.py  get_performance.py  perturbation_analysis_foraging.py  reference_archive.py  tables.py  worker_developments.py
cmake/: FindTBB.cmake
cmake_scripts/: make_all_BO.sh  make_all_analysis.sh  make_all_envirparallel.sh  make_all_envirparallelforaging.sh  make_all_heteroexps.sh  make_all_heterosim.sh  make_all_largeheterosim.sh  make_all_largesim.sh  make_all_parallel.sh  make_all_parallellarge.sh  make_all_printnet.sh  make_all_recording.sh  make_all_simulation.sh  make_all_tests.sh  make_baseline.sh  make_ite.sh
experiments/: Gomes_BO.argos  Gomes_experiment_template.argos  Gomes_walls_and_robots_std.argos  analysis.argos  baseline-behavs.argos  baseline-behavsOLD.argos  dynamics.argos  environment_diversity.argos  environment_template.argos  evolution.argos  experiment_template.argos  experiment_template_perturbation.argos  experiment_template_perturbation_with_visual.argos  generator0.argos  generator1.argos  generator2.argos  harvesting.argos  harvesting_template.argos  history.argos  history_BO.argos  multiagent_spirit.argos  mutualinfo.argos  mutualinfoact.argos  nnrab_evol.argos  obsavoid_evol.argos  realrobot_test.argos  realrobot_testBO.argos  sdbc_all_std.argos  spirit.argos
experiments/harvesting/: adaptation_example.argos  adaptation_example_noID.argos  adaptation_example_printnetwork.argos  adaptation_example_randomID.argos  adaptation_example_record.argos  harvesting.argos  harvesting_heterogeneous.argos  harvesting_heterogeneous_large.argos  harvesting_heterogeneous_record.argos  harvesting_heterogeneous_record_large.argos  harvesting_large.argos  harvesting_printnetwork.argos  harvesting_printnetwork_large.argos  harvesting_printnetwork_template.argos  harvesting_printnetwork_template_large.argos  harvesting_template.argos  harvesting_template_large.argos  harvesting_template_large2X.argos  harvesting_template_large4X.argos  harvesting_virtual.argos
experiments/perturbations/: run1_p0.txt  run1_p1.txt  run1_p10.txt  run1_p11.txt  run1_p12.txt  run1_p13.txt  run1_p14.txt  run1_p15.txt  run1_p16.txt  run1_p17.txt  run1_p18.txt  run1_p19.txt  run1_p2.txt  run1_p20.txt  run1_p21.txt  run1_p22.txt  run1_p23.txt  run1_p24.txt  run1_p25.txt  run1_p26.txt  run1_p27.txt  run1_p28.txt  run1_p29.txt  run1_p3.txt  run1_p30.txt  run1_p31.txt  run1_p32.txt  run1_p33.txt  run1_p34.txt  run1_p35.txt  run1_p36.txt  run1_p37.txt  run1_p38.txt  run1_p39.txt  run1_p4.txt  run1_p40.txt  run1_p41.txt  run1_p42.txt  run1_p43.txt  run1_p44.txt  (+460 more)
src/: BO.cpp  analysis.cpp  argosparallel2_eval.h  argosparallel_eval.h  baselinebehavs.cpp  behaviour_evol.cpp  envir_evol.cpp  envir_evol_cont.cpp  epuck_nn_controller.cpp  evolution_loop_functions.cpp  evolution_loop_functions.h  exec_tools.h  main.cpp  phen_dnn.hpp
src/baseline-behavs/: aggregatebehavior.cpp  aggregatebehavior.h  baseline-behavs-loopfunc.cpp  baseline-behavs-loopfunc.h  baseline-behavs-robids.cpp  baseline-behavs-robids.h  baseline-behavs.cpp  baseline-behavs.h  behavior.cpp  behavior.h  bordercoveragebehavior.cpp  bordercoveragebehavior.h  circlebehavior.cpp  coveragebehavior.cpp  coveragebehavior.h  dest_chain_behavior.cpp  dest_chain_behavior.h  dest_chain_behavior1.cpp  dest_chain_behavior1.h  dispersebehavior.cpp  dispersebehavior.h  flockingbehavior.cpp  flockingbehavior.h  homingtofoodbeaconbehavior.cpp  homingtofoodbeaconbehavior.h  link_chain_behavior.cpp  link_chain_behavior.h  link_chain_behavior1.cpp  link_chain_behavior1.h  obstacleavoidancebehavior.cpp  obstacleavoidancebehavior.h  randomwalkbehavior.cpp  randomwalkbehavior.h  sensingandcommunication.cpp  sensingandcommunication.h  src_chain_behavior.cpp  src_chain_behavior.h  src_chain_behavior1.cpp  src_chain_behavior1.h
src/caffe_nets/: DynamicsModel.prototxt  DynamicsModel_solver.prototxt  MLP.prototxt  MLP_solver.prototxt  caffe_net.cpp  caffe_net.h
src/core/: arena_utils.cpp  arena_utils.h  base_controller.cpp  base_controller.h  base_loop_functions.cpp  base_loop_functions.h  environment_generator.cpp  (+11 more)
src/ite/: CMakeLists.txt  baselines.cpp  baselines.hpp  exhaustive_constrained_localpen.hpp  exhaustive_constrained_search.hpp  exhaustive_search_archive.hpp  exhaustive_search_multimap.hpp  global.hpp  ite_swarms.cpp  ite_swarms.hpp  ite_swarms_VE.cpp  ite_swarms_uniform.cpp  mean_archive.hpp  syscmd.cpp  tuning.cpp  tuning.hpp  tuning_VE.cpp
(+1096 files in other folders)
